sandc/test/fixtures/astRegression/shouldFail/productions/switchPseudex/EmptyElseBody.sand
pub class EmptyElseBody {
    foo() {
        let a = switch val {
            case c {
                d
            }

            else {

            }
        };
    }
}